--- a/css/base.css
+++ b/css/base.css
@@ -167,12 +167,27 @@ body{
 
 
 /* 二屏 */
+@keyframes scaleDraw {  /*定义关键帧、scaleDrew是需要绑定到选择器的关键帧名称*/
+        0%{
+            transform: scale(1);  /*开始为原始大小*/
+        }
+        25%{
+            transform: scale(2); /*放大1.1倍*/
+        }
+        50%{
+            transform: scale(1);
+        }
+        75%{
+            transform: scale(2);
+        }
+    }
 .skill{
     display: inline-block;
     font-size: 40px;
     width: 40px;
     margin: 130px 0 0 150px;
     line-height: 70px;
+    -webkit-animation: scaleDraw ease-in-out infinite  10s; 
 }
 
 
@@ -250,15 +265,16 @@ body{
     color: #E5E5DD;
 }
 .four .txt{
-    width: 700px;
+    width: 620px;
     line-height: 40px;
     margin: 0 auto;
     background: rgba(66,66,66,.3);
     border-radius: 10px;
     padding: 20px;
+    overflow: hidden;
 }
 .four .txt a{
-    margin-left: 160px;
+    float: right;
     color: #8CF8F5;
 }
 
